# krunner-llm-runner

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  uninstall.sh
src/: CMakeLists.txt  kcm_krunner_llm.json  llmclient.cpp  llmclient.hpp  llmconfig.cpp  llmconfig.hpp  llmconfig.ui  llmrunner.cpp  llmrunner.hpp  plasma-runner-llm.json
tests/: test_llmclient.cpp  test_llmrunner.cpp
